# skillbox_project

./: CMakeLists.txt  README.md
conf/: answers.json  config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
